# rs-ws

./: Cargo.toml  Dockerfile  docker-compose.yml
client/: index.js  package-lock.json  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/hooks/: useWebsocket.ts
client/src/types/: request.ts
src/: auth.rs  main.rs  message_bytes.rs  message_type.rs  server.rs  session.rs
src/commands/: coordinates.rs  mod.rs  ping.rs
src/commands/health/: ping.rs
src/commands/room/: create_room.rs  join_room.rs  leave_room.rs  mod.rs  read_room.rs  response.rs
src/responses/: error_message.rs  mod.rs
src/state/: mod.rs  player.rs  room.rs  session.rs
